--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "Raymond Camden",
   "type": "module",
-  "files": ["dist"],
+  "files": ["PDFServiceSDK.mjs"],
   "license":"Apache-2.0",
-  "main": "dist/index.js"
+  "main": "PDFServiceSDK.mjs"
 }
